<resources>
    <string name="app_name">Proyecto Final</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="check">check</string>
    <string name="redx">redx</string>
    <string name="entrar">Entrar</string>
    <string name="add_user">add user</string>
    <string name="login">login</string>
    <string name="ingresar_usuario">Ingresar usuario</string>
    <string name="crear_nuevo_usuario">Crear nuevo usuario</string>
    <string name="carrera">Carrera</string>
    <string name="button">Button</string>
    <string name="ingresar_como_usuario">Ingresar como usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="carrera_dependencia">Carrera / Dependencia</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
</resources>
